RESOLVED FIXED282645
[SOUP] Fix build with old libsoup
https://bugs.webkit.org/show_bug.cgi?id=282645
Summary [SOUP] Fix build with old libsoup
Michael Catanzaro
Reported 2024-11-05 14:51:15 PST
Fix build with old libsoup. Some of the CString creation is not correct.
Attachments
Michael Catanzaro
Comment 1 2024-11-05 14:53:55 PST
EWS
Comment 2 2024-11-05 15:57:37 PST
Committed 286190@main (212939d20834): <https://commits.webkit.org/286190@main> Reviewed commits have been landed. Closing PR #36218 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.