Cherry-pick 286190@main (212939d20834). https://bugs.webkit.org/show_bug.cgi?id=282645

[SOUP] Fix build with old libsoup
    https://bugs.webkit.org/show_bug.cgi?id=282645

    Unreviewed build fix.

    This is not the right way to construct a CString from a span.

    * Source/WebKit/NetworkProcess/soup/WebSocketTaskSoup.cpp:
    (WebKit::WebSocketTask::sendString):
    * Source/WebKit/UIProcess/Inspector/glib/RemoteInspectorHTTPServer.cpp:

    Canonical link: https://commits.webkit.org/286190@main

Canonical link: https://commits.webkit.org/282416.276@webkitglib/2.46